templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
  namespace: ${NAMESPACE}
spec:
  ports:
    - name: http
      port: 80
      targetPort: ${CONTAINER_PORT}
  selector:
    app: ${NAME}
