templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-${NAME}
  namespace: ${NAMESPACE}
  annotations:
      cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
     - hosts:
       - ${HOST}
       secretName: letsencrypt-nginx-${NAME}
  rules:
    - host: ${HOST}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ${NAME}
              port:
                number: 80
  ingressClassName: nginx
